fix word wrap

--- a/client/src/app/components/roms/rom-info/game-description/game-description.component.scss
+++ b/client/src/app/components/roms/rom-info/game-description/game-description.component.scss
@@ -1,14 +1,15 @@
 @charset "UTF-8";
 
 @import '../../../../../assets/scss/variables';
+@import '../../../../../assets/scss/functions';
 
 #description {
   background: $white;
   border: 1px solid $light-gray;
-  height: 557.2px;
-  // overflow-y: scroll;
+  height: em(557.2px);
+  overflow-y: scroll;
   padding: 1em 20px 20px;
-  // word-wrap: break-word;
+  word-wrap: break-word;
   @media only all and (max-width: 938px) {
     height: auto;
   }
